--- a/takeshape/src/templates/partials/navigation.html
+++ b/takeshape/src/templates/partials/navigation.html
@@ -2,7 +2,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <h1 class="title is-4">
-      	[Your SITE NAME]
+      	Hidden Bookstores
       </h1>
     </a>
 
