--- a/takeshape/src/templates/pages/search.html
+++ b/takeshape/src/templates/pages/search.html
@@ -31,22 +31,22 @@
 		<div class="columns">
 			<div class="column is-one-fifths">
 
-				<b>Milk Types</b>
-				<div id="milk" class="facet"></div>
+				<b>What type of book</b>
+				<div id="type" class="facet"></div>
 				<br>
 
 				<b>City</b>
-				<div id="locationcity" class="facet"></div>
+				<div id="city" class="facet"></div>
 
 				<br>
 
-				<b>Covering</b>
-				<div id="covering" class="facet"></div>
+				<b>Other Interest</b>
+				<div id="interest" class="facet"></div>
 
 				<br>
 
-				<b>Age</b>
-				<div id="aged" class="facet"></div>
+				<b>Type of store</b>
+				<div id="store" class="facet"></div>
 
 			</div>
 
