--- a/takeshape/src/templates/partials/footer.html
+++ b/takeshape/src/templates/partials/footer.html
@@ -2,9 +2,9 @@
   <div class="content has-text-centered">
     <p>
       <strong>
-      	[SITE NAME]
+      	Hidden Bookstores
       </strong>
-			by <a href="https://jgthms.com">[YOUR NAME]</a>.
+			by <a href="https://jgthms.com">Annabel S.</a>.
     </p>
 		<p>
 			2019
